Fix: Mejoras a desempeño de simulación